Remove ilk files from build packages

--- a/package.json
+++ b/package.json
@@ -74,8 +74,8 @@
       "./changelog.md",
       "./readme.md",
       "./package.json",
-      "!lib/**/*.{h,py,c,gz,sln,map,lib,sh,gyp,gypi,html,md,MD,markdown,txt,tlog,vcxproj,vcxproj.*,yml,xml,iobj,ipdb}",
-      "!node_modules/**/*.{h,py,c,gz,sln,map,lib,sh,gyp,gypi,html,md,MD,markdown,txt,tlog,vcxproj,vcxproj.*,yml,xml,iobj,ipdb}",
+      "!lib/**/*.{h,py,c,gz,sln,map,lib,sh,gyp,gypi,html,md,MD,markdown,txt,tlog,vcxproj,vcxproj.*,yml,xml,iobj,ipdb,ilk}",
+      "!node_modules/**/*.{h,py,c,gz,sln,map,lib,sh,gyp,gypi,html,md,MD,markdown,txt,tlog,vcxproj,vcxproj.*,yml,xml,iobj,ipdb,ilk}",
       "!node_modules/**/{MAKEFILE,Dockerfile,TODO,README,LICENSE,LICENSE.*,Makefile,License,NOTICE,license,gruntfile.js,metadata.js,metadata.json,bower.json,component.json}",
       "!node_modules/**/doc/*",
       "!node_modules/**/Release/*.{map,lib,exp}",
