Update build scripts to work with npm 7

--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "debug": "electron . -d",
     "editor": "electron . -eo",
     "editor:debug": "electron . -eo -d",
-    "build:debug": "./node_modules/.bin/electron-builder --dir",
+    "build:debug": "electron-builder --dir",
     "build:debug-compile": "npm run compile && npm run build:debug",
-    "build:debug-quick": "./node_modules/.bin/electron-builder --dir --c.npmRebuild=false",
+    "build:debug-quick": "electron-builder --dir --c.npmRebuild=false",
     "build:debug-quick-compile": "npm run compile && npm run build:debug-quick",
     "clean": "npm run clean:code && npm run clean:css",
     "compile": "npm run compile:css && npm run compile:themes && npm run compile:worker && npm run compile:common && npm run min && echo Compile Done",
@@ -34,13 +34,13 @@
     "compile:css": "node-sass src/css/ -o build/css/ --output-style compressed",
     "compile:themes": "node-sass src/themes/ -o build/themes/ --output-style compressed",
     "package": "npm run package:win && npm run package:linux",
-    "package:win": "node_modules/.bin/electron-builder --win nsis portable --ia32 --x64",
-    "package:winportable": "node_modules/.bin/electron-builder --win portable  --ia32 --x64",
-    "package:mac": "node_modules/.bin/electron-builder --mac pkg zip",
+    "package:win": "electron-builder --win nsis portable --ia32 --x64",
+    "package:winportable": "electron-builder --win portable  --ia32 --x64",
+    "package:mac": "electron-builder --mac pkg zip",
     "package:linux": "npm run package:linux32 && npm run package:linux64",
-    "package:linux32": "./node_modules/.bin/electron-builder --linux deb AppImage rpm tar.xz --ia32",
-    "package:linux64": "./node_modules/.bin/electron-builder --linux deb AppImage rpm tar.xz snap --x64",
-    "min": "./node_modules/.bin/minify out -d build/js --mangle --simplify",
+    "package:linux32": "electron-builder --linux deb AppImage rpm tar.xz --ia32",
+    "package:linux64": "electron-builder --linux deb AppImage rpm tar.xz snap --x64",
+    "min": "minify out -d build/js --mangle --simplify",
     "release:win": "npm run compile && npm run package:win",
     "release:linux": "npm run compile && npm run package:linux",
     "release:mac": "npm run compile && npm run package:mac",
