--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "compile:debug-linux": "npm run compile:css && npm run compile:themes && npm run compile:worker && npm run compile:common && cp out/*.js build/js/ && cp out/editor build/js/editor && echo Compile Done",
     "compile:common": "tsc -p . --listEmittedFiles",
     "compile:worker": "tsc -p ./src/worker --listEmittedFiles",
-    "compile:css": "node-sass src/css/ -o build/css/ --output-style compressed",
-    "compile:themes": "node-sass src/themes/ -o build/themes/ --output-style compressed",
+    "compile:css": "sass src/css:build/css --style compressed --no-source-map",
+    "compile:themes": "sass src/themes:build/themes --style=compressed --no-source-map",
     "package": "npm run package:win && npm run package:linux",
     "package:win": "electron-builder --win nsis portable --ia32 --x64",
     "package:winportable": "electron-builder --win portable  --ia32 --x64",
@@ -40,7 +40,7 @@
     "package:linux": "npm run package:linux32 && npm run package:linux64",
     "package:linux32": "electron-builder --linux deb AppImage rpm tar.xz --ia32",
     "package:linux64": "electron-builder --linux deb AppImage rpm tar.xz snap --x64",
-    "min": "minify out -d build/js --mangle --simplify",
+    "min": "minify out -d build/js --mangle --simplify --builtIns=false",
     "release:win": "npm run compile && npm run package:win",
     "release:linux": "npm run compile && npm run package:linux",
     "release:mac": "npm run compile && npm run package:mac",
@@ -53,12 +53,12 @@
     "@types/bootstrap": "^3.4.0",
     "@types/jquery": "^3.5.5",
     "@types/node": "^14.14.37",
-    "babel-minify": "^0.4.3",
-    "electron": "^12.0.2",
-    "electron-builder": "^22.10.5",
-    "eslint": "^7.23.0",
+    "babel-minify": "^0.5.1",
+    "electron": "^12.0.6",
+    "electron-builder": "^22.11.1",
+    "eslint": "^7.25.0",
     "eslint-plugin-html": "^6.1.2",
-    "node-sass": "^5.0.0"
+    "sass": "^1.32.12"
   },
   "build": {
     "appId": "jiMUD",
@@ -131,19 +131,19 @@
     }
   },
   "dependencies": {
-    "better-sqlite3": "^7.1.4",
+    "better-sqlite3": "^7.3.1",
     "buzz": "^1.2.1",
     "chokidar": "^3.5.1",
     "electron-updater": "^4.3.8",
-    "font-list": "^1.2.13",
-    "fs-extra": "^9.1.0",
+    "font-list": "^1.2.14",
+    "fs-extra": "^10.0.0",
     "fswin": "^3.21.107",
     "lz-string": "^1.4.4",
-    "markdown-it": "^12.0.4",
+    "markdown-it": "^12.0.6",
     "mathjs-expression-parser": "^1.0.2",
     "moment": "^2.29.1",
     "monaco-editor": "^0.21.3",
-    "node-disk-info": "^1.2.0",
+    "node-disk-info": "^1.3.0",
     "rgbcolor": "^1.0.1",
     "tmp": "^0.2.1",
     "yargs-parser": "^20.2.7",
