--- a/package.json
+++ b/package.json
@@ -87,16 +87,16 @@
       "!node_modules/better-sqlite3/deps/*",
       "!node_modules/better-sqlite3/build/deps/*",
       "!node_modules/better-sqlite3/obj/*",
-      "!node_modules/better-sqlite3/build/Release/obj/**/*",
+      "!node_modules/better-sqlite3/build/Release/obj${/*}",
       "!node_modules/better-sqlite3/build/Release/test_extension.node",
-      "!node_modules/fsevents/lib/binding/Release/**/*",
+      "!node_modules/fsevents/lib/binding/Release${/*}",
       "!node_modules/**/benchmark/*",
       "!node_modules/**/browser/*",
       "!node_modules/monaco-editor/!(min)/*",
       "!node_modules/moment/locale/*",
       "!node_modules/moment/min/*",
       "!node_modules/spellchecker/vendor/hunspell/*",
-      "!node_modules/{strip-ansi,string-width,wide-align,signal-exit,has-unicode,console-control-strings,aproba,gauge,end-of-stream,xtend,prebuild-install,detect-libc,expand-template,github-from-package,node-abi,noop-logger,npmlog,os-homedir,tar-fs,pump,rc,simple-get,tunnel-agent,which-pm-runs,tar-stream,tar-stream/readable-stream}/**/*",
+      "!node_modules/{strip-ansi,string-width,wide-align,signal-exit,has-unicode,console-control-strings,aproba,gauge,end-of-stream,xtend,prebuild-install,detect-libc,expand-template,github-from-package,node-abi,noop-logger,npmlog,os-homedir,tar-fs,pump,rc,simple-get,tunnel-agent,which-pm-runs,tar-stream,tar-stream/readable-stream}${/*}",
       "node_modules/monaco-editor/min/**/*"
     ],
     "extends": null,
