--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "build:debug-quick-compile": "npm run compile && npm run build:debug-quick",
     "clean": "npm run clean:code && npm run clean:css",
     "compile": "npm run compile:css && npm run compile:themes && npm run compile:worker && npm run compile:common && npm run min && echo Compile Done",
-    "compile:debug": "npm run compile:css && npm run compile:themes && npm run compile:worker && npm run compile:common && copy out\\*.js build\\js\\ && xcopy /Y /E /I out\\editor build\\js\\editor && echo Compile Done",
-    "compile:debug-linux": "npm run compile:css && npm run compile:themes && npm run compile:worker && npm run compile:common && cp out/*.js build/js/ && cp out/editor build/js/editor && echo Compile Done",
-    "compile:common": "tsc -p . --listEmittedFiles",
-    "compile:worker": "tsc -p ./src/worker --listEmittedFiles",
+    "compile:debug": "npm run compile:css && npm run compile:themes && npm run compile:worker-debug && npm run compile:common-debug && copy out\\*.js build\\js\\ && xcopy /Y /E /I out\\editor build\\js\\editor && echo Compile Done",
+    "compile:debug-linux": "npm run compile:css && npm run compile:themes && npm run compile:worker-debug && npm run compile:common-debug && cp out/*.js build/js/ && cp out/editor build/js/editor && echo Compile Done",
+    "compile:common": "tsc -p .",
+    "compile:worker": "tsc -p ./src/worker",
+    "compile:common-debug": "tsc -p . --listEmittedFiles",
+    "compile:worker-debug": "tsc -p ./src/worker --listEmittedFiles",    
     "compile:css": "sass src/css:build/css --style compressed --no-source-map",
     "compile:themes": "sass src/themes:build/themes --style=compressed --no-source-map",
     "package": "npm run package:win && npm run package:linux",
