--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "devDependencies": {
     "@types/bootstrap": "^3.4.0",
     "@types/jquery": "^3.5.5",
+    "@types/mathjs": "^6.0.12",
     "@types/node": "^14.14.37",
     "babel-minify": "^0.5.1",
     "electron": "^12.0.6",
@@ -143,7 +144,7 @@
     "fswin": "^3.21.107",
     "lz-string": "^1.4.4",
     "markdown-it": "^12.0.6",
-    "mathjs-expression-parser": "^1.0.2",
+    "mathjs": "^9.3.2",
     "moment": "^2.29.1",
     "monaco-editor": "^0.23.0",
     "node-disk-info": "^1.3.0",
