--- a/package.json
+++ b/package.json
@@ -115,8 +115,7 @@
     },
     "nsis": {
       "installerIcon": "./assets/icons/win/app.ico",
-      "artifactName": "${productName}_Setup_${version}_Windows-${arch}.${ext}",
-      "doNotPackElevateHelper": true
+      "artifactName": "${productName}_Setup_${version}_Windows-${arch}.${ext}"
     },
     "portable": {
       "artifactName": "${productName}_${version}_Windows_portable-${arch}.${ext}"
