--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "compile:css": "sass src/css:build/css --style=compressed --no-source-map",
     "compile:themes": "sass src/themes:build/themes --style=compressed --no-source-map",
     "package": "npm run package:win && npm run package:linux",
-    "package:win": "electron-builder --win nsis portable --ia32 --x64",
+    "package:win": "electron-builder --win nsis portable msi --ia32 --x64",
     "package:winportable": "electron-builder --win portable --ia32 --x64",
     "package:mac": "electron-builder --mac pkg zip",
     "package:linux": "npm run package:linux32 && npm run package:linux64",
