--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "@types/mathjs": "^9.4.2",
     "@types/node": "^15.14.9",
     "babel-minify": "^0.5.1",
-    "electron": "^13.5.1",
+    "electron": "^15.1.0",
     "electron-builder": "^22.11.7",
     "eslint": "^7.32.0",
     "eslint-plugin-html": "^6.2.0",
@@ -135,6 +135,7 @@
     }
   },
   "dependencies": {
+    "@electron/remote": "^2.0.1",
     "better-sqlite3": "^7.4.3",
     "buzz": "^1.2.1",
     "chokidar": "^3.5.2",
