--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "package:win": "electron-builder --win nsis portable msi --ia32 --x64",
     "package:winportable": "electron-builder --win portable --ia32 --x64",
     "package:mac": "electron-builder --mac pkg zip",
-    "package:linux": "npm run package:linux32 && npm run package:linux64",
+    "package:linux": "npm run package:linux64",
     "package:linux32": "electron-builder --linux deb AppImage rpm tar.xz --ia32",
     "package:linux64": "electron-builder --linux deb AppImage rpm tar.xz snap --x64",
     "min": "minify out -d build/js --mangle --simplify --builtIns=false",
