--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
       "./changelog.md",
       "./readme.md",
       "./package.json",
+      "!./build/test.html",
       "!lib/**/*.{h,py,c,gz,sln,map,lib,sh,gyp,gypi,html,md,MD,markdown,txt,tlog,vcxproj,vcxproj.*,yml,xml,iobj,ipdb,ilk}",
       "!node_modules/**/*.{h,py,c,gz,sln,map,lib,sh,gyp,gypi,html,md,MD,markdown,txt,tlog,vcxproj,vcxproj.*,yml,xml,iobj,ipdb,ilk}",
       "!node_modules/**/{MAKEFILE,Dockerfile,TODO,README,LICENSE,LICENSE.*,Makefile,License,NOTICE,license,gruntfile.js,metadata.js,metadata.json,bower.json,component.json}",
