--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "build:debug-quick": "electron-builder --dir --c.npmRebuild=false",
     "build:debug-quick-compile": "npm run compile && npm run build:debug-quick",
     "clean": "npm run clean:code && npm run clean:css",
+    "clean-linux": "npm run clean-linux:code && npm run clean-linux:css",
     "compile": "npm run compile:css && npm run compile:themes && npm run compile:worker && npm run compile:common && npm run min && echo Compile Done",
     "compile:debug": "npm run compile:css && npm run compile:themes && npm run compile:worker-debug && npm run compile:common-debug && copy out\\*.js build\\js\\ && xcopy /Y /E /I out\\editor build\\js\\editor && echo Compile Done",
     "compile:debug-linux": "npm run compile:css && npm run compile:themes && npm run compile:worker-debug && npm run compile:common-debug && cp out/*.js build/js/ && cp -r out/editor build/js/editor && echo Compile Done",
@@ -48,6 +49,8 @@
     "release:mac": "npm run compile && npm run package:mac",
     "clean:code": "del /q .\\out\\*.js && del /q .\\out\\editor\\*.js && del /q .\\build\\js\\*.js && del /q .\\build\\js\\editor\\*.js",
     "clean:css": "del /q .\\build\\css\\*.css",
+    "clean:code-linux": "rm ./out/*.js && rm ./out/editor/*.js && rm ./build/js/*.js && rm ./build/js/cditor/*.js",
+    "clean:css-linux": "rm ./build/css/*.css",
     "clean:dist": "rm -rf ./dist",
     "list": "asar l .\\dist\\win-unpacked\\resources\\app.asar > .\\dist\\files%npm_package_version%.txt",
     "rebuild": "electron-rebuild"
@@ -55,12 +58,12 @@
   "devDependencies": {
     "@types/bootstrap": "^3.4.0",
     "@types/jquery": "^3.5.14",
-    "@types/node": "^18.7.15",
+    "@types/node": "^18.7.17",
     "babel-minify": "^0.5.2",
     "electron": "^19.0.16",
     "electron-builder": "^23.3.3",
     "electron-rebuild": "^3.2.9",
-    "eslint": "^8.23.0",
+    "eslint": "^8.23.1",
     "eslint-plugin-html": "^7.1.0",
     "sass": "^1.54.9"
   },
@@ -149,7 +152,7 @@
     "fswin": "^3.22.106",
     "lz-string": "^1.4.4",
     "markdown-it": "^13.0.1",
-    "mathjs": "^11.1.0",
+    "mathjs": "^11.2.0",
     "moment": "^2.29.4",
     "monaco-editor": "^0.34.0",
     "node-disk-info": "^1.3.0",
