Strip out more unneeded modules for smaller installed package

--- a/package.json
+++ b/package.json
@@ -107,6 +107,16 @@
       "!node_modules/{tar,strip-ansi,string-width,wide-align,signal-exit,has-unicode,console-control-strings,aproba,gauge,end-of-stream,xtend,prebuild-install,detect-libc,expand-template,github-from-package,node-abi,noop-logger,npmlog,os-homedir,tar-fs,pump,rc,simple-get,tunnel-agent,which-pm-runs,tar-stream,tar-stream/readable-stream}${/*}",
       "!node_modules/mathjs/**/*",
       "!node_modules/rxjs/**/*",
+      "!node_modules/typed-emitter/rxjs/**/*",
+      "!node_modules/@babel/**/*",
+      "!node_modules/complex.js/**/*",
+      "!node_modules/decimal.js/**/*",
+      "!node_modules/escape-latex/**/*",
+      "!node_modules/fraction.js/**/*",
+      "!node_modules/javascript-natural-sort/**/*",
+      "!node_modules/seedrandom/**/*",
+      "!node_modules/tiny-emitter/**/*",
+      "!node_modules/typed-function/**/*",   
       "./node_modules/mathjs/lib/browser/math.js",
       "node_modules/monaco-editor/min/**/*",
       "node_modules/@electron/remote/**/*"
