--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "website": "https://github.com/icewolfz/jiMUD",
   "homepage": "https://github.com/icewolfz/jiMUD",
   "url": "https://github.com/icewolfz/jiMUD/issues",
-  "version": "0.19.6",
+  "version": "1.19.0-alpha",
   "main": "build/main.js",
   "description": "MUD client coded in javascript.",
   "author": "Icewolfz",
