Try and improve typescript building speeds

--- a/src/worker/tsconfig.json
+++ b/src/worker/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compileOnSave": true,
     "compilerOptions": {
+        "incremental": true,
         "target": "es2017",
         "module": "none",
         "moduleResolution": "classic",
