`-data-dir` now supports relative paths and will attempt to resolve them based on the current working directory of the application Add start:local and debug:local to allow starting of election using the local data path instead of global

--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "private": true,
   "scripts": {
     "start": "electron .",
+    "start:local": "electron . --data-dir=./data",
     "debug": "electron . -d",
+    "debug:local": "electron . --data-dir=./data -d",
     "editor": "electron . -eo",
     "editor:debug": "electron . -eo -d",
     "build:debug": "electron-builder --dir",
